--- a/roles/k3s_server_post/templates/ciliuml2.crs.j2
+++ b/roles/k3s_server_post/templates/ciliuml2.crs.j2
@@ -1,11 +1,11 @@
 apiVersion: "cilium.io/v2alpha1"
 kind: CiliumL2AnnouncementPolicy
 metadata:
-  name: policy1
+  name: cilium-l2-policy
 spec:
   serviceSelector:
     matchLabels:
-      l2: true 
+      l2: "true" 
   nodeSelector:
     matchExpressions:
       - key: node-role.kubernetes.io/control-plane
@@ -29,4 +29,4 @@ spec:
 {% endif %}
   serviceSelector:
     matchLabels:
-      l2: true
+      l2: "true"
