fix metallb disablign condition

--- a/roles/k3s_server_post/templates/ciliuml2.crs.j2
+++ b/roles/k3s_server_post/templates/ciliuml2.crs.j2
@@ -6,10 +6,7 @@ spec:
   serviceSelector:
     matchLabels:
       l2: "true" 
-  nodeSelector:
-    matchExpressions:
-      - key: node-role.kubernetes.io/control-plane
-        operator: DoesNotExist
+  nodeSelector: {}
   interfaces:
   - ^eth[0-9]+
   externalIPs: true
